RESOLVED FIXED219224
RTCVideoEncoderH264 does not need to support case without ENABLE_VCP_ENCODER and without HAVE_VTB_REQUIREDLOWLATENCY
https://bugs.webkit.org/show_bug.cgi?id=219224
Summary RTCVideoEncoderH264 does not need to support case without ENABLE_VCP_ENCODER ...
youenn fablet
Reported 2020-11-20 14:04:04 PST
RTCVideoEncoderH264 does not need to support case without ENABLE_VCP_ENCODER and without HAVE_VTB_REQUIREDLOWLATENCY
Attachments
Patch (6.73 KB, patch)
2020-11-20 14:08 PST, youenn fablet
ews-feeder: commit-queue-
Patch (7.00 KB, patch)
2020-11-20 14:18 PST, youenn fablet
ews-feeder: commit-queue-
Patch (7.88 KB, patch)
2020-11-20 14:44 PST, youenn fablet
ews-feeder: commit-queue-
Patch (8.40 KB, patch)
2020-11-20 14:50 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-11-20 14:08:58 PST
youenn fablet
Comment 2 2020-11-20 14:18:00 PST
youenn fablet
Comment 3 2020-11-20 14:44:37 PST
youenn fablet
Comment 4 2020-11-20 14:50:33 PST
EWS
Comment 5 2020-11-27 00:08:04 PST
Committed r270181: <https://trac.webkit.org/changeset/270181> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414732 [details].
Radar WebKit Bug Importer
Comment 6 2020-11-27 00:09:21 PST
Note You need to log in before you can comment on or make changes to this bug.