RTCVideoEncoderH264 does not need to support case without ENABLE_VCP_ENCODER and without HAVE_VTB_REQUIREDLOWLATENCY https://bugs.webkit.org/show_bug.cgi?id=219224

Reviewed by Eric Carlson.

* Source/webrtc/sdk/WebKit/VideoProcessingSoftLink.h:
Make sure to compile the same with public SDK
* Source/webrtc/sdk/objc/components/video_codec/RTCVideoEncoderH264.mm:
(-[RTCVideoEncoderH264 resetCompressionSessionWithPixelFormat:]):
Remove code path that is no longer useful.


Canonical link: https://commits.webkit.org/231890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270181 268f45cc-cd09-0410-ab3c-d52691b4dbfc