Source/ThirdParty/libwebrtc/Source/webrtc/sdk/objc/components/video_codec/RTCVideoEncoderH264.mm
@@ -718,8 +718,7 @@ NSUInteger GetMaxSampleRate(const webrtc::H264::ProfileLevelId &profile_level_id
                                  nullptr,
                                  &_vtCompressionSession);
 
-#if defined(WEBRTC_MAC) && !defined(WEBRTC_IOS)
-#if ENABLE_VCP_ENCODER
+#if defined(WEBRTC_MAC) && !defined(WEBRTC_IOS) && ENABLE_VCP_ENCODER
   CFBooleanRef hwaccl_enabled = nullptr;
   if (status == noErr) {
     status = VTSessionCopyProperty(_vtCompressionSession,
@@ -743,7 +742,7 @@ NSUInteger GetMaxSampleRate(const webrtc::H264::ProfileLevelId &profile_level_id
         webrtc::VCPCompressionSessionCreate(nullptr,  // use default allocator
                                _width,
                                _height,
-                               kVCPCodecType4CC_H264,
+                               'ftvc',
                                encoderSpecs,
                                sourceAttributes,
                                nullptr,  // use default compressed data allocator
@@ -751,98 +750,9 @@ NSUInteger GetMaxSampleRate(const webrtc::H264::ProfileLevelId &profile_level_id
                                nullptr,
                                &_vcpCompressionSession);
   }
-#elif HAVE_VTB_REQUIREDLOWLATENCY
-  // Provided encoder should be good enough.
 #else
-  if (status != noErr) {
-    if (encoderSpecs) {
-        CFRelease(encoderSpecs);
-        encoderSpecs = nullptr;
-    }
-    if (sourceAttributes) {
-      CFRelease(sourceAttributes);
-      sourceAttributes = nullptr;
-    }
-
-    auto isStandardFrameSize = [](int32_t width, int32_t height) {
-        // FIXME: Envision relaxing this rule, something like width and height dividable by 4 or 8 should be good enough.
-        if (width == 1280)
-            return height == 720;
-        if (width == 720)
-            return height == 1280;
-        if (width == 960)
-            return height == 540;
-        if (width == 540)
-            return height == 960;
-        if (width == 640)
-            return height == 480;
-        if (width == 480)
-            return height == 640;
-        if (width == 288)
-            return height == 352;
-        if (width == 352)
-            return height == 288;
-        if (width == 320)
-            return height == 240;
-        if (width == 240)
-            return height == 320;
-        return false;
-    };
-
-    if (!isStandardFrameSize(_width, _height)) {
-      _disableEncoding = true;
-      RTC_LOG(LS_ERROR) << "Using H264 software encoder with non standard size is not supported";
-      return WEBRTC_VIDEO_CODEC_ERROR;
-    }
-    [self destroyCompressionSession];
-
-    CFDictionaryRef ioSurfaceValue = CreateCFTypeDictionary(nullptr, nullptr, 0);
-    int64_t pixelFormatType = framePixelFormat;
-    CFNumberRef pixelFormat = CFNumberCreate(nullptr, kCFNumberLongType, &pixelFormatType);
-
-    const size_t attributesSize = 3;
-    CFTypeRef keys[attributesSize] = {
-      kCVPixelBufferOpenGLCompatibilityKey,
-      kCVPixelBufferIOSurfacePropertiesKey,
-      kCVPixelBufferPixelFormatTypeKey
-    };
-    CFTypeRef values[attributesSize] = {
-      kCFBooleanTrue,
-      ioSurfaceValue,
-      pixelFormat};
-    sourceAttributes = CreateCFTypeDictionary(keys, values, attributesSize);
-
-    if (ioSurfaceValue) {
-      CFRelease(ioSurfaceValue);
-      ioSurfaceValue = nullptr;
-    }
-    if (pixelFormat) {
-      CFRelease(pixelFormat);
-      pixelFormat = nullptr;
-    }
-
-    encoderSpecs = CFDictionaryCreateMutable(nullptr, 2, &kCFTypeDictionaryKeyCallBacks, &kCFTypeDictionaryValueCallBacks);
-    CFDictionarySetValue(encoderSpecs, kVTVideoEncoderSpecification_EnableHardwareAcceleratedVideoEncoder, kCFBooleanFalse);
-    int usageValue = 1;
-    CFNumberRef usage = CFNumberCreate(nullptr, kCFNumberIntType, &usageValue);
-    CFDictionarySetValue(encoderSpecs, kVTVideoEncoderSpecification_Usage, usage);
-    if (usage) {
-      CFRelease(usage);
-      usage = nullptr;
-    }
-    status = VTCompressionSessionCreate(nullptr,  // use default allocator
-                                 _width,
-                                 _height,
-                                 kCMVideoCodecType_H264,
-                                 encoderSpecs,  // use hardware accelerated encoder if available
-                                 sourceAttributes,
-                                 nullptr,  // use default compressed data allocator
-                                 compressionOutputCallback,
-                                 nullptr,
-                                 &_vtCompressionSession);
-  }
-#endif // !HAVE_VTB_REQUIREDLOWLATENCY
-#endif // defined(WEBRTC_MAC) && !defined(WEBRTC_IOS)
+  // Provided encoder should be good enough.
+#endif // defined(WEBRTC_MAC) && !defined(WEBRTC_IOS) && ENABLE_VCP_ENCODER
   if (sourceAttributes) {
     CFRelease(sourceAttributes);
     sourceAttributes = nullptr;
